# ros-qp4

./: my_ros_commands.txt  notes.txt  readme.md
assets/cad/: asb-04-black.dae  asb-04.dae  asb-06.dae  asb-09-black.dae  asb-09.dae  asb-10-black.dae  asb-10.dae  asb-11-black.dae  asb-11.dae  asb-11.stl  asb-15-black.dae  asb-15.dae  asb-506-black.dae  asb-506.dae  asb-512-black.dae  asb-512.dae  asb-512.stl  back_left_hip.dae  back_left_hip_s.dae  back_right_hip.dae  back_right_hip_s.dae  front_left_hip.dae  front_left_hip_s.dae  front_right_hip.dae  front_right_hip_s.dae  hs-645-mg-metal.dae  hs-645-mg.dae  servo-mesh.dae  servo.dae
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/qp4_description/: CMakeLists.txt  package.xml  qp4.gv
src/qp4_launch/: CMakeLists.txt  package.xml
src/qp4_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/qp4_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  qp4.srdf
src/qp4_moveit/launch/: api_test.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/qp4_moveit/src/: moveit_api_test.cpp
src/qp4_msgs/: CMakeLists.txt  package.xml
src/qp4_msgs/msg/: BodyCommand.msg  Input.msg  ModeCommand.msg  QuestionCommand.msg  RobotCommand.msg
(+49 files in other folders)
