<?xml version="1.0"?>
<package>
  <name>qp4_msgs</name>
  <version>0.0.0</version>
  <description>The qp4_msgs package</description>
  <maintainer email="stewart@todo.todo">stewart</maintainer>
  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
